# twitch_reconf

./: requirements.txt  sample.conf  setup.cfg
slideshow/css/: demostyles.css  simple-slideshow-styles.css
template/: logo.j2.html  slideshow.j2.html  video.j2.html
twitch_reconf/: config.py  configurator.py  constants.py  logger.py  main.py  websocket.py
