[metadata]
name = twitch_reconf
version = 0.1.0
author = Justin L. Hammond
author-email = runningempty@gmail.com
summary = Script to move files to common directory for OBS purposes
description-file = README.md
license = Apache-2
home-page = https://github.com/roaet/twitch_reconf
classifier =
    Development Status :: 4 - Beta
        Environment : Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    tw_reconf = twitch_reconf.main:run
